syntax = "proto3";

option csharp_namespace = "CarManagementService";

service LocationHubService {
  rpc GetAllLocationHubs (Empty) returns (LocationHubList);
  rpc GetLocationHubByID (LocationHubRequest) returns (LocationHub);
  rpc AddLocationHub (LocationHub) returns (LocationHubResponse);
  rpc UpdateLocationHub (LocationHub) returns (LocationHubResponse);
  rpc DeleteLocationHub (LocationHubRequest) returns (LocationHubResponse);
}

message Empty{}

message LocationHubRequest {
  int32 id = 1;
}

message LocationHub {
  int32 id = 1; 
  string locationname = 2;
  string address = 3;
  string city = 4; 
  string country = 5; 
  string email = 6; 
  string phonenr = 7;
  int32 carcapacity = 8;
}

message LocationHubList {
  repeated LocationHub locationhub = 1;
}
message LocationHubResponse {
  bool success = 1; 
  string message = 2; 
}